--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -15,13 +15,13 @@
   animation-delay: 0.15s;
 
   @include breakpoint($small) {
-   padding-left: 1em;
-   padding-right: 1em;
+   padding-left: 3em;
+   padding-right: 3em;
   }
 
   @include breakpoint($medium) {
-   padding-left: 10em;
-   padding-right: 10em;
+   padding-left: 7.5em;
+   padding-right: 7.5em;
   }
 
   @include breakpoint($x-large) {
@@ -248,7 +248,7 @@ body {
   border-radius: $border-radius 0 0 0;
 
   @include breakpoint($large) {
-    padding: 5px 10px;
+    padding: 5px;
   }
 
   a {
